--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -286,9 +286,13 @@
         }
         @include mmd {
             max-width: 360px;
+            margin: 0 auto;
         }
         @include sm {
             margin: 0 auto 30px;
+        }
+        @include ssm{
+            max-width: 349px;
         }
         & img {
             transition: all .3s ease-in-out;
@@ -822,177 +826,432 @@ button.accordion-button {
             top: 31px;
         }
     }
-    // &#first>* {
-    //     &:first-child {
-    //         transform: rotate(-270deg);
-    //         @include lg {
-    //             transform: rotate(-90deg) translate(-28px, -29px);
-    //         }
-    //         @include mmd {
-    //             transform: rotate(-90deg) translate(-30px, -29px);
-    //         }
-    //     }
-    //     &:nth-child(2) {
-    //         transform: rotate(270deg);
-    //         @include lg {
-    //             transform: rotate(-90deg) translate(-29px, -29px)
-    //         }
-    //         @include mmd {
-    //             transform: rotate(-90deg) translate(-31px, -30px)
-    //         }
-    //     }
-    //     &:nth-child(3) {
-    //         transform: rotate(-90deg);
-    //         @include lg {
-    //             transform: rotate(-90deg) translate(-30px, -27px);
-    //         }
-    //         @include mmd {
-    //             transform: rotate(-90deg) translate(-30px, -27px);
-    //         }
-    //     }
-    //     &:last-child() {
-    //         transform: rotate(-90deg) translate(-4px, -6px);
-    //         @include lg {
-    //             transform: rotate(-90deg) translate(-30px, -30px);
-    //         }
-    //         @include mmd {
-    //             transform: rotate(-90deg) translate(-30px, -30px);
-    //         }
-    //     }
-    // }
-    // &#second>* {
-    //     &:first-child {
-    //         transform: scaleY(-1) translate(-1px, -4px);
-    //         @include mmd {
-    //             transform: scaleY(-1) translate(-1px, -62px);
-    //         }
-    //     }
-    //     &:nth-child(2) {
-    //         transform: rotate(-180deg) translate(-5px, 0px);
-    //         @include mmd {
-    //             transform: rotate(-180deg) translate(-4px, -59px);
-    //         }
-    //     }
-    //     &:nth-child(3) {
-    //         transform: scaleY(-1) translate(-1px, -9px);
-    //         @include mmd {
-    //             transform: scaleY(-1) translate(-1px, -62px);
-    //         }
-    //     }
-    //     // &:last-child() {}
-    // }
-    // &#third>* {
-    //     &:first-child {
-    //         transform: rotate(90deg) translate(0px, -2px);
-    //         @include mmd {
-    //             transform: rotate(-270deg) translate(28px, -32px);
-    //         }
-    //     }
-    //     &:nth-child(2) {
-    //         transform: rotate(-90deg) translate(-3px, -3px);
-    //         @include mmd {
-    //             transform: rotate(90deg) translate(30px, -32px);
-    //         }
-    //     }
-    //     &:nth-child(3) {
-    //         transform: rotate(90deg) translate(4px, -5px);
-    //         @include mmd {
-    //             transform: rotate(90deg) translate(31px, -32px);
-    //         }
-    //     }
-    //     &:last-child() {
-    //         transform: rotate(90deg);
-    //         @include mmd {
-    //             transform: rotate(90deg) translate(31px, -30px);
-    //         }
-    //     }
-    // }
-    // &#four>* {
-    //     &:first-child {}
-    //     &:nth-child(2) {}
-    //     &:nth-child(3) {}
-    //     &:last-child() {}
-    // }
-    // &#first .ss {
-    //     transform: rotate(-270deg);
-    //     @include lg {
-    //         transform: rotate(-90deg) translate(-28px, -29px);
-    //     }
-    //     @include mmd {
-    //         transform: rotate(-90deg) translate(-30px, -29px);
-    //     }
-    // }
-    // &#first .eff {
-    //     transform: rotate(270deg);
-    //     @include lg {
-    //         transform: rotate(-90deg) translate(-29px, -29px)
-    //     }
-    //     @include mmd {
-    //         transform: rotate(-90deg) translate(-31px, -30px)
-    //     }
-    // }
-    // &#first .sc {
-    //     transform: rotate(-90deg);
-    //     @include lg {
-    //         transform: rotate(-90deg) translate(-30px, -27px);
-    //     }
-    //     @include mmd {
-    //         transform: rotate(-90deg) translate(-30px, -27px);
-    //     }
-    // }
-    // &#first .au {
-    //     transform: rotate(-90deg) translate(-4px, -6px);
-    //     @include lg {
-    //         transform: rotate(-90deg) translate(-30px, -30px);
-    //     }
-    //     @include mmd {
-    //         transform: rotate(-90deg) translate(-30px, -30px);
-    //     }
-    // }
-    // &#second .eff {
-    //     transform: scaleY(-1) translate(-1px, -4px);
-    //     @include mmd {
-    //         transform: scaleY(-1) translate(-1px, -62px);
-    //     }
-    // }
-    // &#second .sc {
-    //     transform: rotate(-180deg) translate(-5px, 0px);
-    //     @include mmd {
-    //         transform: rotate(-180deg) translate(-4px, -59px);
-    //     }
-    // }
-    // &#second .au {
-    //     transform: scaleY(-1) translate(-1px, -9px);
-    //     @include mmd {
-    //         transform: scaleY(-1) translate(-1px, -62px);
-    //     }
-    // }
-    // &#third .sc {
-    //     transform: rotate(90deg) translate(0px, -2px);
-    //     @include mmd {
-    //         transform: rotate(-270deg) translate(28px, -32px);
-    //     }
-    // }
-    // &#third .ss {
-    //     transform: rotate(-90deg) translate(-3px, -3px);
-    //     @include mmd {
-    //         transform: rotate(90deg) translate(30px, -32px);
-    //     }
-    // }
-    // &#third .au {
-    //     transform: rotate(90deg) translate(4px, -5px);
-    //     @include mmd {
-    //         transform: rotate(90deg) translate(31px, -32px);
-    //     }
-    // }
-    // &#third .eff {
-    //     transform: rotate(90deg);
-    //     @include mmd {
-    //         transform: rotate(90deg) translate(31px, -30px);
-    //     }
-    // }
+    
 }
 
+@media(min-width:1280px) and (max-width:1350px) {
+    .all_click_icons {
+        & .nav-link {
+            &:first-child {
+                top: 202px;
+                left: 38px;
+            }
+            &:nth-child(2) {
+                top: 397px;
+                left: 218px;
+            }
+            &:nth-child(3) {
+                top: 208px;
+                left: 406px;
+            }
+            &:last-child {
+                left: 215px;
+                top: 31px;
+            }
+        }
+        &#\31 {
+            & .nav-link {
+                &:first-child {
+                    top: 34px;
+                    left: 205px;
+                }
+                &:nth-child(2) {
+                    top: 213px;
+                    left: 19px;
+                }
+                &:nth-child(3) {
+                    top: 401px;
+                    left: 209px;
+                }
+                &:nth-child(4) {
+                    top: 213px;
+                    left: 384px;
+                }
+            }
+        }
+        &#\32 {
+            & .nav-link {
+                &:first-child {
+                    top: 201px;
+                    left: 377px;
+                }
+                &:nth-child(2) {
+                    left: 204px;
+                    top: 14px;
+                }
+                &:nth-child(3) {
+                    top: 203px;
+                    left: 17px;
+                }
+                &:nth-child(4) {
+                    top: 380px;
+                    left: 204px;
+                }
+            }
+        }
+        
+    &#\33 {
+        & .nav-link {
+            &:first-child {
+                top: 371px;
+                left: 209px;
+            }
+            &:nth-child(2) {
+                top: 199px;
+                left: 402px;
+            }
+            &:nth-child(3) {
+                top: 12px;
+                left: 213px;
+            }
+            &:nth-child(4) {
+                top: 200px;
+                left: 35px;
+            }
+        }
+    }
+    }
+}
+
+@media(min-width:992px) and (max-width:1279px) {
+    .all_click_icons {
+        & .nav-link {
+            &:first-child {
+                top: 156px;
+                left: 31px;
+            }
+            &:nth-child(2) {
+                top: 302px;
+                left: 166px;
+            }
+            &:nth-child(3) {
+                top: 158px;
+                left: 307px;
+            }
+            &:last-child {
+                left: 165px;
+                top: 25px;
+            }
+        }
+        &#\31 {
+            & .nav-link {
+                &:first-child {
+                    top: 27px;
+                    left: 158px;
+                }
+                &:nth-child(2) {
+                    top: 162px;
+                    left: 16px;
+                }
+                &:nth-child(3) {
+                    top: 303px;
+                    left: 159px;
+                }
+                &:nth-child(4) {
+                    top: 162px;
+                    left: 293px;
+                }
+            }
+        }
+        &#\32 {
+            & .nav-link {
+                &:first-child {
+                    top: 153px;
+                    left: 286px;
+                }
+                &:nth-child(2) {
+                    left: 156px;
+                    top: 13px;
+                }
+                &:nth-child(3) {
+                    top: 154px;
+                    left: 13px;
+                }
+                &:nth-child(4) {
+                    top: 290px;
+                    left: 156px;
+                }
+            }
+        }
+        
+    &#\33 {
+        & .nav-link {
+            &:first-child {
+                top: 283px;
+                left: 161px;
+            }
+            &:nth-child(2) {
+                top: 152px;
+                left: 306px;
+            }
+            &:nth-child(3) {
+                top: 9px;
+                left: 163px;
+            }
+            &:nth-child(4) {
+                top: 152px;
+                left: 28px;
+            }
+        }
+    }
+    }
+}
+
+
+
+@media(min-width:768px) and (max-width:991px) {
+    .all_click_icons {
+        & .nav-link {
+            &:first-child {
+                top: 118px;
+                left: 22px;
+            }
+            &:nth-child(2) {
+                top: 227px;
+                left: 124px;
+            }
+            &:nth-child(3) {
+                top: 117px;
+                left: 232px;
+            }
+            &:last-child {
+                left: 124px;
+                top: 16px;
+            }
+        }
+        &#\31 {
+            & .nav-link {
+                &:first-child {
+                    top: 19px;
+                    left: 118px;
+                }
+                &:nth-child(2) {
+                    top: 121px;
+                    left: 11px;
+                }
+                &:nth-child(3) {
+                    top: 228px;
+                    left: 119px;
+                }
+                &:nth-child(4) {
+                    top: 121px;
+                    left: 222px;
+                }
+            }
+        }
+        &#\32 {
+            & .nav-link {
+                &:first-child {
+                    top: 114px;
+                    left: 216px;
+                }
+                &:nth-child(2) {
+                    left: 116px;
+                    top: 7px;
+                }
+                &:nth-child(3) {
+                    top: 114px;
+                    left: 8px;
+                }
+                &:nth-child(4) {
+                    top: 218px;
+                    left: 117px;
+                }
+            }
+        }
+        
+    &#\33 {
+        & .nav-link {
+            &:first-child {
+                top: 213px;
+                left: 119px;
+            }
+            &:nth-child(2) {
+                top: 113px;
+                left: 230px;
+            }
+            &:nth-child(3) {
+                top: 6px;
+                left: 121px;
+            }
+            &:nth-child(4) {
+                top: 113px;
+                left: 20px;
+            }
+        }
+    }
+    }
+}
+
+
+@media(max-width:767px) {
+    .all_click_icons {
+        & .nav-link {
+            &:first-child {
+                top: 118px;
+                left: 22px;
+            }
+            &:nth-child(2) {
+                top: 227px;
+                left: 124px;
+            }
+            &:nth-child(3) {
+                top: 117px;
+                left: 232px;
+            }
+            &:last-child {
+                left: 124px;
+                top: 16px;
+            }
+        }
+        &#\31 {
+            & .nav-link {
+                &:first-child {
+                    top: 19px;
+                    left: 118px;
+                }
+                &:nth-child(2) {
+                    top: 121px;
+                    left: 11px;
+                }
+                &:nth-child(3) {
+                    top: 228px;
+                    left: 119px;
+                }
+                &:nth-child(4) {
+                    top: 121px;
+                    left: 222px;
+                }
+            }
+        }
+        &#\32 {
+            & .nav-link {
+                &:first-child {
+                    top: 114px;
+                    left: 216px;
+                }
+                &:nth-child(2) {
+                    left: 116px;
+                    top: 7px;
+                }
+                &:nth-child(3) {
+                    top: 114px;
+                    left: 8px;
+                }
+                &:nth-child(4) {
+                    top: 218px;
+                    left: 117px;
+                }
+            }
+        }
+        
+    &#\33 {
+        & .nav-link {
+            &:first-child {
+                top: 213px;
+                left: 119px;
+            }
+            &:nth-child(2) {
+                top: 113px;
+                left: 230px;
+            }
+            &:nth-child(3) {
+                top: 6px;
+                left: 121px;
+            }
+            &:nth-child(4) {
+                top: 113px;
+                left: 20px;
+            }
+        }
+    }
+    }
+}
+
+
+@media(max-width:479px) {
+    .all_click_icons {
+        & .nav-link {
+            &:first-child {
+                top: 113px;
+                left: 21px;
+            }
+            &:nth-child(2) {
+                top: 220px;
+                left: 119px;
+            }
+            &:nth-child(3) {
+                top: 114px;
+                left: 224px;
+            }
+            &:last-child {
+                left: 119px;
+                top: 16px;
+            }
+        }
+        &#\31 {
+            & .nav-link {
+                &:first-child {
+                    top: 18px;
+                    left: 113px;
+                }
+                &:nth-child(2) {
+                    top: 117px;
+                    left: 9px;
+                }
+                &:nth-child(3) {
+                    top: 221px;
+                    left: 115px;
+                }
+                &:nth-child(4) {
+                    top: 117px;
+                    left: 213px;
+                }
+            }
+        }
+        &#\32 {
+            & .nav-link {
+                &:first-child {
+                    top: 111px;
+                    left: 208px;
+                }
+                &:nth-child(2) {
+                    left: 112px;
+                    top: 7px;
+                }
+                &:nth-child(3) {
+                    top: 112px;
+                    left: 8px;
+                }
+                &:nth-child(4) {
+                    top: 213px;
+                    left: 113px;
+                }
+            }
+        }
+        
+    &#\33 {
+        & .nav-link {
+            &:first-child {
+                top: 206px;
+                left: 115px;
+            }
+            &:nth-child(2) {
+                top: 111px;
+                left: 222px;
+            }
+            &:nth-child(3) {
+                top: 5px;
+                left: 117px;
+            }
+            &:nth-child(4) {
+                top: 111px;
+                left: 19px;
+            }
+        }
+    }
+    }
+}
 @media(max-width:1200px) and (min-width:992px) {
     .all_click_icons {
         transform: translate(-50%, -50%);
@@ -1002,101 +1261,3 @@ button.accordion-button {
 figure.w_i {
     position: relative;
 }
-
-// .all_click_icons .sc {
-//     position: absolute;
-//     top: 52%;
-//     left: 105px;
-//     width: 84px;
-//     height: 84px;
-//     margin-top: -54px;
-//     text-align: center;
-//     line-height: 84px;
-//     border-radius: 50%;
-//     opacity: 1;
-//     @include lg {
-//         top: 52%;
-//         left: 90px;
-//         width: 35px;
-//         height: 35px;
-//     }
-//     @include mmd {
-//         top: 53%;
-//         left: 65px;
-//         width: 30px;
-//         height: 30px;
-//     }
-// }
-// .all_click_icons .ss {
-//     position: absolute;
-//     bottom: 87px;
-//     left: 50%;
-//     width: 84px;
-//     height: 84px;
-//     margin-left: -34px;
-//     text-align: center;
-//     line-height: 84px;
-//     border-radius: 50%;
-//     opacity: 1;
-//     @include lg {
-//         left: 54.5%;
-//         bottom: 102px;
-//         width: 35px;
-//         height: 35px;
-//     }
-//     @include mmd {
-//         left: 56%;
-//         bottom: 85px;
-//         width: 30px;
-//         height: 30px;
-//     }
-// }
-// .all_click_icons .au {
-//     position: absolute;
-//     top: 50%;
-//     right: 80px;
-//     width: 84px;
-//     height: 84px;
-//     margin-top: -44px;
-//     text-align: center;
-//     line-height: 84px;
-//     border-radius: 50%;
-//     opacity: 1;
-//     @include lg {
-//         top: 49.7%;
-//         right: 72px;
-//         width: 35px;
-//         height: 35px;
-//     }
-//     @include mmd {
-//         top: 50%;
-//         right: 53px;
-//         width: 30px;
-//         height: 30px;
-//     }
-// }
-// .all_click_icons .eff {
-//     position: absolute;
-//     top: 99px;
-//     left: 50%;
-//     width: 84px;
-//     height: 84px;
-//     margin-left: -36px;
-//     text-align: center;
-//     line-height: 84px;
-//     border-radius: 50%;
-//     opacity: 1;
-//     @include lg {
-//         top: 59px;
-//         left: 50%;
-//         margin-left: -13px;
-//         width: 35px;
-//         height: 35px;
-//     }
-//     @include mmd {
-//         left: 57%;
-//         top: 33px;
-//         width: 30px;
-//         height: 30px;
-//     }
-// }
